Commit 4. Se cambia íconos, textos en Acerca de Mí

--- a/index.html
+++ b/index.html
@@ -69,40 +69,37 @@
         <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
 
         <p class="my-4">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam distinctio, odit laborum aliquam
-            earum itaque cum sequi, dolorem optio vol
+            Gracias a mi formación especializada, considero que puedo aportar valor y seguir desarrollándome profesionalmente en una compañía que coincida con mis valores y expectativas. Soy un apasionado por la tecnología y el desarrollo de Software. Me encanta ayudar a las personas con el conocimiento que tengo y generar conexiones que permitan contribuir al Desarrollo de CHILE. 
         </p>
 
 
         <div class="row">
             <div class="col-12 col-md-4">
-                <i class="fas fa-camera fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Fotógrafa de comida</h3>
+                <i class="fas fa-laptop fa-3x my-3"></i>
+                <h3 class="my-3 fw-bold">Programador</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                   Me gusta mucho la programación, actualmente estoy
+                   programado en Java en el backend y trabajando con Angular en el
+                   Front-End.
                 </p>
             </div>
             <div class="col-12 col-md-4">
-                <i class="fas fa-bullhorn fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Crítica culinaria</h3>
+                <i class="far fa-edit fa-3x my-3"></i>
+                <h3 class="my-3 fw-bold">Escritor de Artículos</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    Me encanta escribir artículos que tengan que ver con la Teología,
+                    me parece una disciplina fascinante, dado que no solo adquieres conocimiento,
+                    sino que además, vas conociendo a Dios más profundamente. Es un esfuerzo que
+                    alimenta el alma. 
                 </p>
             </div>
             <div class="col-12 col-md-4">
-                <i class="far fa-map fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Bloggera de viajes</h3>
+                <i class="fas fa-film fa-3x my-3"></i>
+                <h3 class="my-3 fw-bold">Ir al Cine</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    El cine es una de mis pasiones favoritas, dado que las historias te pueden llevar
+                    a distintas realidades y conceptos. Me gusta mucho la ciencia ficción, sobre todo
+                    aquellas películas que te hacen pensar.
                 </p>
             </div>
         </div>
