Commit 5. Se cambia imagenes y texto en Mis Viajes

--- a/index.html
+++ b/index.html
@@ -106,21 +106,22 @@
     </section>
 
 
-    <section id="Mis-trabajos" class="my-5 p-5 bg-info">
+    <section id="Mis-trabajos" class="my-5 p-5 bg-secondary">
 
-        <h2 class="display-4 fw-bold text-center text-light mb-3">Mis trabajos</h2>
+        <h2 class="display-4 fw-bold text-center text-light mb-3">Mis Viajes</h2>
 
         <div class="row">
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-1.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/new_york.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Asado en la Patagonia</h5>
+                        <h5 class="card-title fw-bold">New York</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Explicabo iure sint, perspiciatis distinctio molestias nihil
-                            repudiandae neque rem adipisci repellendus libero illo quo
-                            blanditiis, velit quasi ad, recusandae voluptates officia.
+                            En este momento, cuando escribo estos recuerdos, tengo un grupo de amigos en NY, les ayudé 
+                            a armar un itinerario perfecto y ellos están haciendo su propio camino, su propia aventura 
+                            Viajera. Y ya les conté que van a volver diferentes… y si, en cada mensaje me 
+                            dan la razón!.
+                            Realmente, es la ciudad que nunca duerme.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -130,14 +131,14 @@
             </div>
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-2.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/paris.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Papas del fin del mundo</h5>
+                        <h5 class="card-title fw-bold">París</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Deserunt a culpa doloremque voluptatem dicta nam. Maxime ipsum,
-                            consequatur quos error fuga excepturi quo. Laudantium optio
-                            pariatur laboriosam modi, ea molestias?
+                            Es una de las ciudades que mas llamo mi atención y que sin dudas esta en mi top 3, 
+                            mas allá de sus atracciones que lograron impresionarme y hasta hacerme llorar 
+                            (Mi primer encuentro con la torre Eiffel no pude evitar el llorar de emoción y 
+                            recordar a mi viejo) creo que es una ciudad ideal para todo amante de la historia.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -147,14 +148,14 @@
             </div>
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-3.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/jerusalen.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Salmones de Alaska</h5>
+                        <h5 class="card-title fw-bold">Jerusalén</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Obcaecati facere quibusdam sint id laborum magni velit ducimus
-                            corporis facilis qui architecto dolor, accusamus eveniet
-                            exercitationem fugit. Quod autem neque ducimus.
+                            Jerusalén es una ciudad que impresiona, un cruce de caminos, seguramente también, 
+                            choque de culturas. En algunas, pocas ocasiones, lugar de unión de religiones enfrentadas.
+                            Visitar Jerusalén produce un cúmulo de sentimientos, incluso para los que se definen como no creyentes.
+                            Jerusalén es un mar de sensaciones que marcan un viaje.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
