Commit 6. Cambio de color de botones y footer

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                     El arte busca la expresión del artista, transmitir sentimientos, lograr un placer estético en el observador. La programación, por otro lado, busca la solución a un problema y al mismo tiempo hacerlo de una manera simple, ocultando la complejidad para el fácil mantenimiento del programa. 
                 </p>
                 <div class="mb-5 pb-5">
-                    <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
-                    <button class="btn btn-lg btn-info text-light">Contacto</button>
+                    <button class="btn btn-lg btn-outline-warning text-light me-4">Trabajos</button>
+                    <button class="btn btn-lg btn-warning text-light">Contacto</button>
                 </div>
             </div>
         </div>
@@ -211,7 +211,7 @@
 
 
     <footer class="bg-dark text-center text-light p-4">
-        <p class="mb-0">Olivia Ros 2019. Todos los derechos reservados.</p>
+        <p class="mb-0">Daniel Paz Villaseca <span class="miTexto">© 2022</span>. Todos los derechos reservados.</p>
     </footer>
 
 
