Commit 7. Cambio color de botones, íconos y texto.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <h1 class="miTexto">Daniel Paz Villaseca</h1>
+                <h1 class="text-warning">Daniel Paz Villaseca</h1>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -75,7 +75,7 @@
 
         <div class="row">
             <div class="col-12 col-md-4">
-                <i class="fas fa-laptop fa-3x my-3"></i>
+                <i class="text-warning fas fa-laptop fa-3x my-3"></i>
                 <h3 class="my-3 fw-bold">Programador</h3>
                 <p class="my-3">
                    Me gusta mucho la programación, actualmente estoy
@@ -84,7 +84,7 @@
                 </p>
             </div>
             <div class="col-12 col-md-4">
-                <i class="far fa-edit fa-3x my-3"></i>
+                <i class="text-warning far fa-edit fa-3x my-3"></i>
                 <h3 class="my-3 fw-bold">Escritor de Artículos</h3>
                 <p class="my-3">
                     Me encanta escribir artículos que tengan que ver con la Teología,
@@ -94,7 +94,7 @@
                 </p>
             </div>
             <div class="col-12 col-md-4">
-                <i class="fas fa-film fa-3x my-3"></i>
+                <i class="text-warning fas fa-film fa-3x my-3"></i>
                 <h3 class="my-3 fw-bold">Ir al Cine</h3>
                 <p class="my-3">
                     El cine es una de mis pasiones favoritas, dado que las historias te pueden llevar
@@ -123,7 +123,7 @@
                             dan la razón!.
                             Realmente, es la ciudad que nunca duerme.
                         </p>
-                        <button type="button" class="btn btn-outline-info">
+                        <button type="button" class="btn btn-outline-warning">
                             Ver más
                         </button>
                     </div>
@@ -140,7 +140,7 @@
                             (Mi primer encuentro con la torre Eiffel no pude evitar el llorar de emoción y 
                             recordar a mi viejo) creo que es una ciudad ideal para todo amante de la historia.
                         </p>
-                        <button type="button" class="btn btn-outline-info">
+                        <button type="button" class="btn btn-outline-warning">
                             Ver más
                         </button>
                     </div>
@@ -157,7 +157,7 @@
                             Visitar Jerusalén produce un cúmulo de sentimientos, incluso para los que se definen como no creyentes.
                             Jerusalén es un mar de sensaciones que marcan un viaje.
                         </p>
-                        <button type="button" class="btn btn-outline-info">
+                        <button type="button" class="btn btn-outline-warning">
                             Ver más
                         </button>
                     </div>
@@ -173,11 +173,8 @@
 
         <h2 class="display-4 fw-bold text-center my-4">Contáctame</h2>
 
-        <p class="text-center my-4 d-none d-md-block">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Doloribus
-            sapiente, autem delectus totam expedita
-            animi corporis dolorem qui magnam, aspernatur officiis quasi culpa tempora est commodi. Voluptate beatae
-            tempora quaerat?</p>
+        <p class="text-center my-4 d-none d-md-block">Si quieres conocerme para trabajar juntos, escríbeme y pronto
+            te responderé. No dudes en hacerlo. Gracias por visitar mi página.</p>
 
         <form>
 
@@ -188,18 +185,16 @@
             </div>
 
             <div class="form-group mb-4">
-                <label class="mb-2">Correo electrónico</label>
                 <input class="form-control" placeholder="Correo electrónico" />
             </div>
 
 
             <div class="form-group">
-                <label class="mb-2">Mensaje</label>
                 <textarea class="form-control" placeholder="Escribe aquí tu mensaje"></textarea>
             </div>
 
             <div class="my-3 text-end">
-                <button class="btn btn-info text-light">Enviar</button>
+                <button class="btn btn-warning text-light">Enviar</button>
             </div>
 
 
