Commit 9. Se corrige texto: Acerca de Mí

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <section id="Acerca-de-mi" class="container text-center my-5">
 
 
-        <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
+        <h2 class="display-3 fw-bold my-4">Acerca de Mí</h2>
 
         <p class="my-4">
             Gracias a mi formación especializada, considero que puedo aportar valor y seguir desarrollándome profesionalmente en una compañía que coincida con mis valores y expectativas. Soy un apasionado por la tecnología y el desarrollo de Software. Me encanta ayudar a las personas con el conocimiento que tengo y generar conexiones que permitan contribuir al Desarrollo de CHILE. 
